<resources>
    <string name="app_name">MEME</string>
    <string name="load_image_first_msg">Upload an image first</string>
    <string name="meme_pic">meme pic</string>
    <string name="top_text">Top Text</string>
    <string name="bottom_text">Bottom Text</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_try">PREVIEW</string>
    <string name="btn_load">LOAD</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_share">SHARE</string>
    <string name="instruction_hint_1">Let\'s create an awesome meme</string>
    <string name="instruction_hint_2">Start by selecting an image from Gallery</string>
    <string name="btn_pick">Pick</string>
    <string name="instruction_hint_3">Let\'s add some text at the top</string>
    <string name="instruction_hint_4">Let\'s add some text at the bottom</string>
    <string name="btn_preview">Preview</string>
</resources>
